chore: update link.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <h3 id="content"></h3>
     <footer>
         <h3>
+            <a href="https://github.com/Vincent-the-gamer/you-are-right" target="_blank">你说得对</a> |
             <a href="https://github.com/Vincent-the-gamer/you-are-right/blob/main/LICENSE" target="_blank">Anti-996 Licensed V1.0</a>
             | 2024-present @ Vincent-the-gamer
         </h3>
